# parametrix-fork

./: LICENSE  README.md
offchain/: .env.test.sample  .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json
oracle-updater/: .env  README.md  feeds.json  pyproject.toml
oracle-updater/app/: main.py
oracle-updater/charli3-pull-oracle-client/: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
oracle-updater/charli3-pull-oracle-client/charli3_odv_client/: exceptions.py
oracle-updater/charli3-pull-oracle-client/charli3_odv_client/blockchain/: chain_query.py  exceptions.py  network.py  transactions.py
oracle-updater/charli3-pull-oracle-client/charli3_odv_client/cli/: __init__.py  main.py
oracle-updater/charli3-pull-oracle-client/charli3_odv_client/cli/commands/: aggregate.py  config.py  feeds.py
oracle-updater/charli3-pull-oracle-client/charli3_odv_client/cli/display/: formatters.py  progress.py  tables.py
oracle-updater/charli3-pull-oracle-client/charli3_odv_client/cli/utils/: file_operations.py  shared.py  validation.py
oracle-updater/charli3-pull-oracle-client/charli3_odv_client/config/: __init__.py  client_config.py  keys.py  reference_script.py
oracle-updater/charli3-pull-oracle-client/charli3_odv_client/core/: aggregation.py  client.py  transaction_builder.py
oracle-updater/charli3-pull-oracle-client/charli3_odv_client/models/: base.py  datums.py  message.py  redeemers.py  requests.py
oracle-updater/charli3-pull-oracle-client/charli3_odv_client/utils/: crypto.py  math.py
oracle-updater/charli3-pull-oracle-client/charli3_odv_client/utils/oracle/: chain_operations.py  reward_calculations.py  state_validation.py  utxo_filters.py
oracle-updater/config/: config.example.yaml
oracle-updater/service/: oracle.py
parametrix-fe/: next.config.ts  package-lock.json  package.json  (+1 more)
(+45 files in other folders)
